<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_topo"
        android:id="@+id/textViewEntrar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLogin"
        android:layout_below="@+id/textViewEntrar"
        android:layout_marginTop="67dp"
        android:layout_alignRight="@+id/editTextSenha"
        android:layout_alignEnd="@+id/editTextSenha"
        android:layout_alignLeft="@+id/editTextSenha"
        android:layout_alignStart="@+id/editTextSenha"
        android:hint="@string/login" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextSenha"
        android:layout_below="@+id/editTextLogin"
        android:layout_centerHorizontal="true"
        android:hint="@string/senha" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_entrar"
        android:id="@+id/buttonEntrar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cadastrar"
        android:id="@+id/buttonCadastrar"
        android:layout_marginBottom="78dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textViewEntrar"
        android:layout_alignStart="@+id/textViewEntrar" />
</RelativeLayout>
